--- a/MQUESTSYS/Views/Shared/Master/Role/Form.cshtml
+++ b/MQUESTSYS/Views/Shared/Master/Role/Form.cshtml
@@ -113,21 +113,9 @@
                                 }
                             </td>
                             <td style="width: 150px">
-                                @if (obj.Key != "CompanySetting" && obj.Key != "PrefixSetting" && obj.Key != "ReportProject")
+                                @if (obj.Key != "CompanySetting" && obj.Key != "PrefixSetting")
                                 {
                                     <input type="checkbox" id="@chkCreateID" name="@chkCreateID" value="true" @chkCreateChecked />@Html.Raw("Create")
-                                }
-                            </td>
-                            <td style="width: 150px">
-                                 @if (obj.Key != "ReportProject")
-                                 {
-                                    <input type="checkbox" id="@chkEditID" name="@chkEditID" value="true" @chkEditChecked />@Html.Raw("Edit")
-                                 }
-                            </td>
-                            <td style="width: 150px">
-                                @if (obj.Key == "Project" || obj.Key == "Invoice" || obj.Key == "InvoicePayment" || obj.Key == "Vocher" || obj.Key == "VocherExpense")
-                                {
-                                    <input type="checkbox" id="@chkApproveID" name="@chkApproveID" value="true" @chkApproveChecked />@Html.Raw("Approve")
                                 }
                             </td>
                         </tr>
