--- a/MQUESTSYS/Views/Shared/Master/LogSendEmail/IndexGrid.cshtml
+++ b/MQUESTSYS/Views/Shared/Master/LogSendEmail/IndexGrid.cshtml
@@ -18,6 +18,9 @@
     var gridColumns = new List<GridColumn>()
     {
         Html.LabelColumn("Code","Send Email Code"),
+        Html.LabelColumn("SubjectEmail","Subject","",delegate(GridColumn col){
+            col.Style = "width:400px";
+        }),
         Html.LabelColumn("SenderName","Sender","",delegate(GridColumn col){
             col.Style = "width:400px";
         }),
@@ -32,6 +35,7 @@
     var filterList = new List<GenericFilterField>()
     {
         Html.GenericFilterTextBoxField("Sender Email Code","Code"),
+        Html.GenericFilterTextBoxField("Subjet","SubjectEmail"),
         Html.GenericFilterTextBoxField("Sender","SenderName"),
         Html.GenericFilterTextBoxField("To","ToName"),
         Html.GenericFilterTextBoxField("CC","CCName"),
